loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:4: error: not found: value count
  count=0
  ^Poucet1:10: error: not found: value count
          count+=1
          ^Poucet1:13: error: not found: value count
  if(count>=3)
     ^