loopdowhile.Poucet1.scala.code

do
{
  count=0
  for (i<-1 to 5)
  	{
      avance()
      if(estSurBiscuit)
      	{
          count+=1
        }
    }
  if(count>=3)
  	{
      gauche()
    }
  else
  	{
      droite()
    }
}
while(!sortieTrouvee())